--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2017-09-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+
+        * Fuse 1.3.9 released.
+
+        * Miscellaneous improvements:
+          * Add support for MLT format screenshots (Fredrick Meunier).
+
 2017-07-31  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.3.8 released.
