--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2017-09-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
-        * Fuse 1.3.9 released.
+        * Fuse 1.4.0 released.
+
+        * New features:
+          * Add DivMMC emulation (Philip Kendall and Sergio Baldoví).
 
         * Miscellaneous improvements:
           * Add support for MLT format screenshots (Fredrick Meunier).
