--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2017-09-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2017-09-03  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.4.0 released.
 
