--- a/man/fuse.1
+++ b/man/fuse.1
@@ -23,7 +23,7 @@
 .\" E-mail: philip-fuse@shadowmagic.org.uk
 .\"
 .\"
-.TH fuse 1 "31st July, 2017" "Version 1.4.0" "Emulators"
+.TH fuse 1 "3rd September, 2017" "Version 1.4.0" "Emulators"
 .\"
 .\"------------------------------------------------------------------
 .\"
