--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2017-10-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+
+        * Fuse 1.4.1 released.
+
+        * Deprecated features removed:
+          * All Z80 variables in the debugger must now be referenced as
+            "z80:NAME" rather than just "NAME" e.g. "set z80:af 0x1234"
+            rather than just "set af 0x1234" (Philip Kendall).
+
 2017-09-03  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.4.0 released.
