--- a/man/fuse.1
+++ b/man/fuse.1
@@ -4944,6 +4944,11 @@ divmmc:control
 .RS
 The last byte written to DivMMC control port.
 .RE
+tape:microphone
+.RS
+The current level of the tape input connected to the `EAR' port. Note that
+this variable can only be read, not written to.
+.RE
 ula:last
 .RS
 The last byte written to the ULA. Note that this variable can only
