Add new spectrum:frames debugger system variable.

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,8 +12,9 @@
         * Debugger improvements:
           * Allow an exit code to be specified when using the "exit" command
             (Philip Kendall).
-          * Add a new "tape:microphone" system variable to allow access to
-            the current tape level (Philip Kendall).
+          * Add new "tape:microphone" and "spectrum:frames" system variables to
+            allow access to the current tape level and frame count since reset
+            (Philip Kendall).
 
         * Deprecated features removed:
           * All Z80 variables in the debugger must now be referenced as
