--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
           * Ensure conditional timed breakpoints work correctly (Philip
             Kendall).
 
+        * Miscellaneous improvements:
+          * Autoload snapshots replaced by a "phantom typist" which types
+            LOAD "" or similar.
+
 2017-10-10  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.4.1 released.
