--- a/man/fuse.1
+++ b/man/fuse.1
@@ -984,6 +984,32 @@ The same as the General Options dialog's
 option.
 .RE
 .PP
+.B \-\-phantom\-typist\-mode
+.I mode
+.RS
+Specify the keystroke sequence that the "phantom typist" should use when
+starting a program loading. Available options are
+.I auto
+(the default),
+.IR keyword ,
+.IR keystroke ,
+.IR menu ,
+.IR plus2a
+and
+.IR plus3 .
+The first four of these correspond to automatic detection based on machine
+model, keyword based entry, keystroke based entry, and selection from a 128K
+style menu.
+.I plus2a
+and
+.I plus3
+also correspond to selection from a 128K style menu, but have special handling
+for games which need to be loaded with `LOAD ""CODE'. The most likely use for
+this option will be use
+.I keystroke
+if you have changed the default 48K ROM for one with keystroke entry.
+.RE
+.PP
 .B \-p
 .I file
 .br
