--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-2017-11-xx  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2017-12-10  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
-        * Fuse 1.x.x released.
+        * Fuse 1.5.0 released.
 
         * Debugger improvements:
           * Ensure conditional timed breakpoints work correctly (Philip
