--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
             DD or FD prefixes (Philip Kendall; thanks, Miguel Angel Rodríguez
             Jódar).
 
+        * Profiler improvements:
+          * Prevent crash when we try to profile an instruction with many DD
+            or FD prefixes (Philip Kendall; thanks, Sergio Baldoví).
+
 2017-12-10  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.0 released.
