Add recent ChangeLog entries

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,11 @@
           * Prevent crash when we try to disassemble an instruction with many
             DD or FD prefixes (Philip Kendall; thanks, Miguel Angel Rodríguez
             Jódar).
+          * Fix crash when setting debugger variables (Gergely Szasz).
+
+        * Miscellaneous improvements:
+          * GTK UI: Improve behaviour of default button on dialogs (thanks,
+            atom-atom) (ub880d and Sergio Baldoví).
 
 2017-12-10  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
