Add option for SDL full-screen mode
New command line switch to list available video modes detected as
full-screen capable, and force the use of one of them (patch #399).

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -1341,6 +1341,16 @@ option;
 see there for more details.
 .RE
 .PP
+.B \-\-sdl\-fullscreen\-mode
+.I mode
+.RS
+Select a screen resolution for full screen mode. Available values for
+.IR mode " are listed in a table, when Fuse is called with"
+.B \-\-sdl\-fullscreen\-mode
+.IR list " command line option."
+This option is effective only under the SDL UI.
+.RE
+.PP
 .B \-\-separation
 .I type
 .RS
