--- a/ChangeLog
+++ b/ChangeLog
@@ -6,15 +6,17 @@
             Jódar).
           * Fix crash when setting debugger variables (Gergely Szasz).
 
+        * Profiler improvements:
+          * Prevent crash when we try to profile an instruction with many DD
+            or FD prefixes (Philip Kendall; thanks, Sergio Baldoví).
+
         * Miscellaneous improvements:
           * GTK+ UI: Improve behaviour of default button on dialogs (thanks,
             atom-atom) (ub880d and Sergio Baldoví).
           * GTK+ and win32 UIs: Support hex numbers in load/save binary and
             pokefinder dialogs (thanks, Allan Turvey) (Sergio Baldoví).
-
-        * Profiler improvements:
-          * Prevent crash when we try to profile an instruction with many DD
-            or FD prefixes (Philip Kendall; thanks, Sergio Baldoví).
+          * SDL UI: Allow to select the video mode used in full-screen (Gergely
+            Szasz).
 
 2017-12-10  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
