--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-02-xx  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2018-02-25  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.1 released.
 
