--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
         * Miscellaneous improvements:
           * Spectrum reset is accelerated when phantom typist is enabled and a
           file is loaded from the menu (Fredrick Meunier).
+          * Add options UI for phantom typist (Fredrick Meunier).
 
 2018-02-25  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
