--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
           * Emulate ROM bug loading zero length blocks when using tape traps
             (ub880d).
 
+        * Machine specific improvements:
+          * Fix the format of double-sided +3 disks (Sergio Baldoví).
+
         * Miscellaneous improvements:
           * Spectrum reset is accelerated when phantom typist is enabled and a
             file is loaded from the menu (Fredrick Meunier).
