Update release dates for 1.5.2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-03-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2018-03-27  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.2 released.
 
