--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2018-04-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
-        * Fuse 1.5.x released.
+        * Fuse 1.5.3 released.
 
         * Emulation core improvements:
           * Disable inactive peripherals after loading a snapshot (Sergio
