Update release dates for 1.5.3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-04-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2018-04-29  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.3 released.
 
