--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2018-??-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+
+        * Fuse 1.x.x released.
+
+        * Miscellaneous improvements:
+          * Add *.fmf as an allowed filetype to file selectors (Sergio Baldoví).
+
 2018-04-29  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.3 released.
