Update some more default sound frequency texts

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -5472,11 +5472,11 @@ option is set to 1, but in most cases you can safely use 2. Also, movie
 recording stops if the emulated machine is changed.
 .PP
 The recorded sound sampling rate and the channel number is equal with the
-Fuse generated sound sampling rate (32000\ Hz by default) and channel
+Fuse generated sound sampling rate (44100\ Hz by default) and channel
 number (mono by default). The common sampling frequencies in
 standard video files are 44100\ Hz and 48000\ Hz. If you use
 .B \-\-sound\-freq
-command line option you can record sound on 44100\ Hz or even 48000\ Hz.
+command line option you can change the frequency.
 .PP
 You can record stereo sound if you use
 .I "AY stereo separation"
