--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-??-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2018-07-01  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.5 released.
 
