--- a/README
+++ b/README
@@ -111,4 +111,4 @@ Usenet newsgroup `comp.sys.sinclair' or the World of Spectrum forums
 <http://www.worldofspectrum.org/forums/>.
 
 Philip Kendall <philip-fuse@shadowmagic.org.uk>
-3rd June, 2018
+1st July, 2018
