--- a/man/fuse.1
+++ b/man/fuse.1
@@ -5036,7 +5036,7 @@ z80:
 .RS
 The value of the specified register. Both 8-bit registers and 16-bit
 register pairs are supported. The MEMPTR / WZ hidden register is also
-supported.
+supported. The (presumable) Q hidden register is also supported.
 .RE
 z80:im
 .RS
