--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-08-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2018-08-06  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.6 released.
 
