--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-09-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+
+        * Miscellaneous improvements:
+          * Remove gcc 8 string overflow warnings (Philip Kendall).
+
 2018-08-06  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.6 released.
