--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-09-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+
+        * Miscellaneous improvements:
+          * "Save binary" command can now save 65536 bytes again (regression
+            introduced in 1.5.6; thanks, thrice) (Philip Kendall).
+
 2018-08-06  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.6 released.
