--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-12-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2018-12-09  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.5.7 released.
 
