--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,8 @@
             (Sergio Baldoví).
           * Allow screenshots with TV 3x, PAL TV and Timex 1.5x scalers (Sergio
             Baldoví).
-          * GTK+ UI: Add Fuse icon to the about dialog (Alberto Garcia).
+          * GTK+ UI: Add Fuse icon to the about dialog and the main window
+            (Alberto Garcia).
 
 2018-12-09  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
