Fix GTK+ 3 build when the GTK+ version is < 3.20
GdkSeat was introduced in GTK+ 3.20, so we need to update the
GTK_CHECK_VERSION() macros accordingly.

The deprecated API works in older versions of GTK+ 3 and in GTK+ 2.

(thanks, Thrice).

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
             Baldoví).
           * GTK+ UI: Add Fuse icon to the about dialog and the main window
             (Alberto Garcia).
+          * Fix GTK+ 3 build when the GTK+ version is < 3.20 (thanks, Thrice)
+            (Alberto Garcia).
 
 2018-12-09  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
