--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
             (Alberto Garcia).
           * Fix GTK+ 3 build when the GTK+ version is < 3.20 (thanks, Thrice)
             (Alberto Garcia).
+          * Allow selection of audio driver at build time (thanks, kov_serg)
+            (Alberto Garcia).
 
 2018-12-09  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
