--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * Miscellaneous improvements:
           * Fix display corruption with HQ 3x scaler (thanks, Philip Kendall)
             (Sergio Baldoví).
+          * Fix antialiasing effect of AdvMAME3x scaler (Sergio Baldoví).
           * Allow screenshots with TV 3x, PAL TV and Timex 1.5x scalers (Sergio
             Baldoví).
           * GTK+ UI: Add Fuse icon to the about dialog and the main window
