--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
           * Fix display corruption with HQ 3x scaler (thanks, Philip Kendall)
             (Sergio Baldoví).
           * Fix antialiasing effect of AdvMAME3x scaler (Sergio Baldoví).
+          * Add 4x, TV 4x and HQ 4x scalers on GTK+, SDL and win32 UIs (Sergio
+            Baldoví).
           * Allow screenshots with TV 3x, PAL TV and Timex 1.5x scalers (Sergio
             Baldoví).
           * GTK+ UI: Add Fuse icon to the about dialog and the main window
