Fix indefinite articles before acronyms

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -2130,7 +2130,7 @@ Stop any currently-recording/playing RZX file.
 .PP
 .I "File, Recording, Finalise..."
 .RS
-Compact a RZX file. Any interspersed snapshot will be removed and the
+Compact an RZX file. Any interspersed snapshot will be removed and the
 recording cannot be continued. All action replays submitted to the RZX
 Archive should be finalised.
 .RE
@@ -3009,7 +3009,7 @@ section for more information).
 .PP
 .I "Stop recording after RZX ends"
 .RS
-If this option is selected, Fuse will stop any movie recording after a RZX 
+If this option is selected, Fuse will stop any movie recording after an RZX
 playback is finished.
 .RE
 .RE
