Rename filename to file for consistency

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -913,7 +913,7 @@ section.
 .RE
 .PP
 .B \-\-movie\-start
-.I filename
+.I file
 .RS
 With this command line option, Fuse will start movie recording as soon as the
 emulator is started. See also the
