Fix indentation in MENUS AND KEYS section
and rename Keyboard dialog and document About dialog.

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -3277,6 +3277,7 @@ The available options are
 and
 .IR Always .
 .RE
+.RE
 .PP
 .I "Options, Save"
 .RS
@@ -3964,7 +3965,7 @@ The same as the
 entries above, but for the memory card slot of the DivMMC interface.
 .RE
 .PP
-.I "Help, Keyboard picture..."
+.I "Help, Keyboard..."
 .RS
 Display a diagram showing the Spectrum keyboard, and the various
 keywords that can be generated with each key from (48K) BASIC. Under
@@ -3974,6 +3975,11 @@ emulator paused) until you press
 .I Esc
 or
 .IR Enter .
+.RE
+.PP
+.I "Help, About..."
+.RS
+Show Fuse's version number.
 .RE
 .PP
 .\"
