Fix segfault on dispmanx SDL v1 backend on the RPI
regression from patch #399 (fixes bug #449) (Jools Wills).

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,8 @@
           * New higher resolution keyboard picture on GTK+ and win32 UIs
             (thanks, Andrew Owen for the picture) (Sergio Baldoví and Philip
             Kendall).
+          * SDL UI: Fix crash when using dispmanx backend on the Raspberry Pi
+            (Jools Wills).
 
 2018-12-09  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
