Improve usability of load/save binary GTK+ dialogs:
- save filename, start and length in static context so those values can
  be offered as default next time.
- don't immediately pop the filename selector if a filename is in the
  context, use that as default.
- left align the filename in the dialog so it looks sensible if the
  dialog is resized wider.
- put the widget focus in the start field when the dialog is popped up.

(patch #416).

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
             Baldoví).
           * GTK+ UI: Add Fuse icon to the about dialog and the main window
             (Alberto Garcia).
+          * GTK+ UI: Load/save binary dialog remember last values (Derek
+            Fountain).
           * Fix GTK+ 3 build when the GTK+ version is < 3.20 (thanks, Thrice)
             (Alberto Garcia).
           * Allow selection of audio driver at build time (thanks, kov_serg)
